projects/kubernetes-local-lab/manifests/base/08-hpa-target-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-demo
  namespace: platform-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hpa-demo
  template:
    metadata:
      labels:
        app: hpa-demo
    spec:
      containers:
        - name: php-apache
          image: registry.k8s.io/hpa-example
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
