projects/kubernetes-local-lab/manifests/base/05-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: platform-lab
spec:
  type: ClusterIP
  selector:
    app: podinfo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
