projects/kubernetes-local-lab/manifests/base/06-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-nodeport
  namespace: platform-lab
spec:
  type: NodePort
  selector:
    app: podinfo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
      nodePort: 30080
