projects/kubernetes-local-lab/manifests/base/08a-hpa-target-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hpa-demo
  namespace: platform-lab
spec:
  selector:
    app: hpa-demo
  ports:
    - name: http
      port: 80
      targetPort: 80
